[package]
name = "waveshare_f401"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-probe = "1.0.0"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f401", "defmt"] }
tinybmp = "0.6.0"

[features]
default = ["stm32f401"]
stm32f401 = []

[lib]
name = "waveshare_f401"
test = false
bench = false

# this lets you use `cargo fix`!
[[bin]]
name = "waveshare_f401"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
